c2prj1_cards/grade.txt
Grading at Tue Apr 14 19:28:01 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:92:25: error: expected ‘)’ before ‘$$’
   if ( value_let >= '2' $$ value_let <= '9')
                         ^
Could not compile your card.c!

Overall Grade: FAILED
